--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -53,7 +53,8 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-     <Compile Include="Assets\script\plane.cs" />
+     <Compile Include="Assets\script\move.cs" />
+     <Compile Include="Assets\script\touch.cs" />
  <Reference Include="Unity.TextMeshPro.Editor">
  <HintPath>C:/Users/yushiang/Desktop/GP-B10515011/Library/ScriptAssemblies/Unity.TextMeshPro.Editor.dll</HintPath>
  </Reference>
