碰撞時不能射子彈

--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -53,6 +53,10 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+     <Compile Include="Assets\script\autoGenerate.cs" />
+     <Compile Include="Assets\script\bullet.cs" />
+     <Compile Include="Assets\script\enemy.cs" />
+     <Compile Include="Assets\script\lazar.cs" />
      <Compile Include="Assets\script\move.cs" />
      <Compile Include="Assets\script\touch.cs" />
  <Reference Include="Unity.TextMeshPro.Editor">
